src/objects/Spoken_Languages__c.object
<CustomObject>
    <fields>
        <fullName>Interview__c</fullName>
        <label>Interview</label>
        <referenceTo>Interview_Summary__c</referenceTo>
        <relationshipLabel>Languages</relationshipLabel>
        <relationshipName>Languages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Ukrainian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastUsed__c</fullName>
        <label>Last Used</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Pre-Intermediate</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Upper-Intermediate</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Proficiency</fullName>
                </value>
                <value>
                    <fullName>Native</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonthsSinceLastUse__c</fullName>
        <formula>MONTH(TODAY()) - MONTH( LastUsed__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Months Since Last Use</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Spoken Languages</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Spoken Languages ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Languages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>